--- a/frontend/project_react/package.json
+++ b/frontend/project_react/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "date-fns": "^3.5.0",
-    "framer-motion": "^11.1.7",
+    "framer-motion": "^11.1.9",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-cookie": "^7.1.4",
     "react-date-picker": "^10.6.0",
     "react-daum-postcode": "^3.1.3",
