--- a/frontend/project_flutter/pubspec.yaml
+++ b/frontend/project_flutter/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   gap: ^3.0.1
   permission_handler: ^11.3.1
   flutter_inappwebview: ^6.0.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_test:
