--- a/frontend/project_flutter/android/app/src/main/AndroidManifest.xml
+++ b/frontend/project_flutter/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:usesCleartextTraffic="true"
         android:label="올봄"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
